fixed a layout issue

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,66 +1,70 @@
 .container {
-    margin-block: 25px;
-    display: flex;
-    align-items: center;
-    gap: 50px;
+  margin-block: 25px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 
 .imageContainer {
-    flex: 1;
-    height: 350px;
-    position: relative;
+  flex: 1;
+  position: relative;
+  aspect-ratio: 16 / 12;
+  width: 100%;
 }
+ .image {
+    object-fit: cover;
+  }
 
 .textContainer {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.image {
-object-fit: cover;
-}
 
 .date {
-    color: gray;
+  color: gray;
 }
 
 .category {
-    color: crimson;
-    font-weight: 500;
+  color: crimson;
+  font-weight: 500;
 }
 
 .title {
-    font-weight: 600;
-    line-height: 130%;
+  font-weight: 600;
+  line-height: 130%;
 }
 
 .btn {
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-    transition: 0.2s ease;
-    display: block;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  transition: 0.2s ease;
+  display: block;
 }
 
 @media screen and (max-width: 1025px) {
-    .title {
-        font-weight: 500;
-        font-size: 1.8rem;
-    }
-    .description {
-        font-size: 1rem;
-    }
+  .title {
+    font-weight: 500;
+    font-size: 1.8rem;
+  }
+  .description {
+    font-size: 1rem;
+  }
 }
-@media screen and (max-width: 640) {
-    .container {
-        flex-direction: column;
-    }
-    .imageContainer {
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .imageContainer {
     flex: 1;
-    position: relative;
     width: 100%;
-    aspect-ratio: 16/11;
-}
+    aspect-ratio: 16/10;
+  }
 }
